force-app/main/default/objects/clofor_com_cfs__PayReqBank__c/fields/clofor_com_cfs__AmountPaidFCYFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidFCYFormula__c</fullName>
    <formula>clofor_com_cfs__BankID__r.clofor_com_cfs__AmountPaidUSD__c</formula>
    <label>Amount Paid(FCY)-Formula</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>