force-app/main/default/objects/clofor_com_cfs__PayReqBank__c/fields/clofor_com_cfs__AmountPaidLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidLocalFormula__c</fullName>
    <formula>clofor_com_cfs__BankID__r.clofor_com_cfs__AmountPaidLocal__c</formula>
    <label>Amount Paid(Local)-Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>