force-app/main/default/objects/clofor_com_cfs__PayReqBank__c/fields/clofor_com_cfs__AmountReceivedLocalforTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountReceivedLocalforTrxPlan__c</fullName>
    <label>Amount Received(Local) for Trx Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>