force-app/main/default/objects/clofor_com_cfs__PayReqBank__c/fields/clofor_com_cfs__BankTrxCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankTrxCode__c</fullName>
    <formula>clofor_com_cfs__BankID__r.clofor_com_cfs__BankTransactionCode__c</formula>
    <label>Bank Trx Code</label>
    <type>Text</type>
</CustomField>