force-app/main/default/objects/clofor_com_cfs__PayReqBank__c/fields/clofor_com_cfs__StartAutoProcessingforTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StartAutoProcessingforTrxPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Automatic Processing for Trx Plan</label>
    <type>Checkbox</type>
</CustomField>